Add JOINT_TRAJ_PT library and files.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "src/libsm0001.kl",
     "src/libsm0002.kl",
     "src/libsm000A.kl",
+    "src/libsm000B.kl",
     "src/libsm000D.kl",
     "src/libsm000E.kl",
     "src/libsm000F.kl",
